--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Portfolio Site",
-  "description": "Portfolio Site",
+  "name": "portfolio-site",
+  "description": "portfolio site",
   "version": "1.0.0",
   "author": "Donald Smith III",
   "dependencies": {
@@ -8,6 +8,7 @@
     "gatsby-link": "^1.6.46",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-sass": "^1.0.26",
+    "react-animate-on-scroll": "^2.1.5",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
